kubernetes/spider/service/spider-flower.yaml
# FLOWER
apiVersion: v1
kind: Service
metadata:
  name: spider-flower
  namespace: spider
spec:
  type: NodePort
  selector:
    app: spider-flower
  ports:
  - name: port-5555
    nodePort: 30555
    port: 5555
    protocol: TCP
