kubernetes/spider/service/spider-redis-cp.yaml
# REDIS-CHECKPOINT
apiVersion: v1
kind: Service
metadata:
  name: redis-checkpoint
  namespace: spider
spec:
  selector:
    app: redis-checkpoint
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
status:
  loadBalancer: {}
