kubernetes/spider/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  namespace: spider
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
spec:
  rules:
  - host: "htcondor-spider-wn62sg32fmxi-node-0"
    http:
      paths:
      - path: /flower
        pathType: ImplementationSpecific
        backend:
          service:
            name: spider-flower
            port:
              number: 5555
